Icon color fix for dark mode

--- a/src/index.scss
+++ b/src/index.scss
@@ -62,7 +62,6 @@ button.primary-outline {
 
 button:disabled {
   cursor: not-allowed;
-  opacity: 0.5;
 }
 
 button:active:enabled {
